syntax = "proto3";

package main;

option go_package = "./messagePB";

message Message {
    string userId = 1;
    string roomId = 2;
    string text = 3;
}

message RoomRequest {
  string userId = 1;
  string roomId = 2;
}

message RoomResponse {
  bool created = 1;
  bool success = 2;
}

service Room {
  rpc GetRoom(RoomRequest) returns (RoomResponse) {}
  rpc PostToRoom(Message) returns (RoomResponse) {}
  rpc DeleteRoom(RoomRequest) returns (RoomResponse) {}
  rpc StreamRoom(RoomRequest) returns (stream Message) {}
}